--- a/text/survival.Rmd
+++ b/text/survival.Rmd
@@ -3,15 +3,16 @@ output:
   word_document: default
   html_document: default
 ---
-If our molecular pathway disruption clusters represent distinct biological states
-apart from tissue of origin, they may have different prognoses within cancer
+If our molecular pathway disruption clusters represent biological states
+distinct from tissue of origin, they may have different prognoses within cancer
 types or across all cancers. These analyses are limited by confounding factors
 of age and stage at diagnosis, sex, ethnicity, and tissue-specific disease
 progression. To explore these ideas, we used Bayesian inference to test models
-of survival using public longevity data from the CDC, accounting for age, gender
-and ethnicity. Our model estimates the effect of cancer type and
-cluster-specific cancer effects independently, resulting in a cancer and
-cluster-specific estimate of the aging rate multiplier, k.
+(see Methods and **Supplemental Methods** for greater detail) of survival using
+public longevity data from the CDC, accounting for age, gender and ethnicity.
+Our model estimates the effect of cancer type and cluster-specific cancer
+effects independently, resulting in a cancer and cluster-specific estimate of
+the aging rate multiplier, $k$.
 
 To understand the model, we show in **Figure 7A** simulated survival time curves
 for four related groups. We start with a cohort of women aged 30 and show their
@@ -77,7 +78,7 @@ it decreases the expectation of life of the individual relative to the
 counterfactual where they did not have cancer.
 
 The degree to which a given cancer accelerates aging can be determined by
-the $k_{tis}$ multiplier (**Figure 8**) multiplied by the cluster modifier
+the $k_{tis}$ multiplier (**Figure 8**) multiplied by the cluster modifier $k_{cl}$
 (**Figure 9**). Looking at the tissue specific multiplier, the least deadly was
 prostate cancer (PRAD), and the most deadly was glioblastoma (GBM) which has a
 risk multiplier of between 15 and 22 relative to the background risk of death in
@@ -86,9 +87,7 @@ patients are affected by GBM and that it is extremely deadly. Among the
 deadliest cancers outside of GBM were stomach (STAD), melanoma (SKCM) and
 pancreatic (PAAD) cancers. Apart from these top 4 cancers which ranged from 6-22
 in relative risk of age-adjusted death, the remaining cancer types ranged from
-about 1 to 5 in magnitude. A rate of 1 represents patients who die relatively
-close to the age predicted purely from their demographics independent of the
-information that they have the given cancer.
+about 1 to 5 in magnitude.
 
 ```{r, results='asis'}
 cat("\\newpage")
@@ -101,12 +100,8 @@ pcanc+mytheme
 
 **Figure 8 Tissue specific effects** Effects are compared between cancer type by
 showing the probability density for the posterior value of the $k_{tis}$
-multiplier. These values reflect the general deadliness of the cancer type
-across all clusters. GBM, PAAD, and SKCM stand out as having values in the 10 to
-20 range with a wide degree of uncertainty. Other cancers such as Prostate
-(PRAD) and Thyroid (THCA) show values down near or even below 1 suggesting that
-these populations may have healthier lifestyles and more access to care. Most
-cancer types fall in the range 2-7 as might be expected.
+multiplier. Larger values correspond to decreased age-independent life
+expectancy.
 
 ```{r, results='asis'}
 cat("\\newpage")
@@ -139,13 +134,13 @@ several cancers ( _e.g._ PRAD, kidney chromophobe (KICH), diffuse large B-cell
 lymphoma (DBLC), thyroid cancer (THCA)) the posterior estimates are largely
 indistinguishable from the prior, reflecting that either there were too few
 mortalities in the data to make an estimate (as expected for PRAD and THCA) or
-two few samples, period. We did not observe cluster-specific trends that held true
-across cancer types, which could result from different cancers having different
-standards of care for example. In support of this interpretation, we also tested
-a factored model which considered both cancer type and each cluster independent of
-cancer type (not shown). Though we were able to successfully fit this model, it
-is a special case of the more general model where cluster and tissue can
-independently affect longevity, and there is no reason to believe that cluster
-specific effects would necessarily remain constant across tissue types given how
-widely the patients vary across tissue types as well as the different drug and
-surgical treatments typically used for each tissue.
+two few samples, period. We did not observe cluster-specific trends that held
+true across cancer types, which could result from different cancers having
+different standards of care for example. In support of this interpretation, we
+also tested a factored model which considered both cancer type and each cluster
+independent of cancer type (not shown). Though we were able to successfully fit
+this model, it is a special case of the more general model where cluster and
+tissue independently affect longevity, and there is no reason to believe that
+cluster specific effects would necessarily remain constant across tissue types
+given how widely the patients vary across tissue types, drug and surgical
+treatments.
