--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -533,19 +533,22 @@ differences that are not likely to be biologically relevant.
 
 ### Models of survival based on population-specific longevity data
 
-We used Bayesian inference to explore the relative impact of cancer diagnosis on
-survival at the time of diagnosis. Our model assumes that at birth each person
-has a small initial probability per unit time to die, and that this probability
-grows exponentially in time at some baseline rate that matches the observed CDC
-data. The rate of growth in risk is assumed to jump to a higher level at
-diagnosis, which we take as a proxy for onset. This represents an accelerated
-aging type model. To fit the model, we constrain the baseline risks using the
-available CDC life tables. We then constrain the cancer specific multiplier
-using the longevity data within the cancer tumor dataset. Our model estimates
-the effect of cancer type and class-specific cancer effects independently,
-resulting in a cancer and class specific estimate of the aging rate multiplier.
-A detailed description of the CDC longevity model and likelihood is provided in
-the **Supplementary methods**.
+We used Bayesian inference to explore the relative impact of cancer
+diagnosis on survival at the time of diagnosis. Our model assumes that
+at birth each person has a small initial probability per unit time to
+die, and that this probability grows exponentially in time at some
+baseline rate that matches the observed CDC data. The rate of growth
+in risk is assumed to jump to a higher level at diagnosis, which we
+take as a proxy for onset. This represents an accelerated aging type
+model. To fit the model, we constrain the baseline risks using the
+available CDC life tables
+(ftp://ftp.cdc.gov/pub/Health_Statistics/NCHS/Publications/NVSR/68_07/). We
+also constrain the cancer specific multiplier using the longevity data
+within the cancer tumor dataset. Our model estimates the effect of
+cancer type and class-specific cancer effects independently, resulting
+in a cancer and class specific estimate of the aging rate multiplier.
+A detailed description of the CDC longevity model and likelihood is
+provided in the **Supplementary methods**.
 
 ## Acknowledgements
 
